# ankiany

./: .gitignore  AGENTS.md  README.md  ankimore.md  cli.py  core.py  main.py  prompt.txt  pyproject.toml  session_context.py  tools.py  web.py
.ai-cli-log/: claude-20251218-221210-ankiany-agent-tool-prioritization.txt  claude-20251220-140159-mobile-ui-optimization.txt  claude-20251220-141107-update-ui-placeholders.txt  claude-20251225-230922-add-efficiency-tip-to-prompt.txt  gemini-20251217-232123-anki-agent-api-key-discussion.txt  gemini-20251218-233129-anki-agent-web-interface-planning.txt  gemini-20251219-095253-web-interface-implementation-planning.txt  gemini-20251219-230036-refactor-anki-agent-codebase.txt  gemini-20251219-234333-anki-web-interface-development.txt  gemini-20251220-111212-anki-web-interface-development.txt  gemini-20251220-115518-web-interface-i18n-updates.txt  gemini-20251225-223201-enhance-prompt-with-learning-rules.txt  gemini-20251225-225712-add-progress-timer-feature.txt
docs/: plan.01.md
static/: index.html
tests/: test_read_tool.py  test_tools.py
