[project]
name = "ankiany"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "claude-agent-sdk>=0.1.17",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.125.0",
    "genanki>=0.13.1",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.38.0",
    "websockets>=15.0.1",
]
